--- a/src/app/modules/guest/components/login/login.component.html
+++ b/src/app/modules/guest/components/login/login.component.html
@@ -1,3 +1,36 @@
-<p>
-  login works!
-</p>
+<mat-card class="container form-control">
+  <mat-card-header>
+    <mat-card-title class="mat-typography">
+      <h1 class="mat-headline mat-display-1"> Login </h1>
+    </mat-card-title>
+  </mat-card-header>
+  <form (ngSubmit)="login(form)" #form="ngForm">
+    <mat-card-content class="text-center">
+
+      <mat-form-field class="form-input">
+        <input
+          #usernameRef="ngModel" matInput placeholder="Username or Email" name="username" [(ngModel)]="username" minlength="4" pattern="^([\.A-z0-9\-@]+)$" type="text" required>
+        <mat-icon matPrefix class="matPrefix">supervisor_account</mat-icon>
+        <mat-error *ngIf="usernameRef.pristine">Username or Email is required</mat-error>
+        <mat-error *ngIf="usernameRef.errors?.pattern">Invalid Username or Email</mat-error>
+        <mat-error *ngIf="usernameRef.errors?.minlength">Username is too short</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="form-input">
+        <input #passwordRef="ngModel" matInput placeholder="password" name="password" [(ngModel)]="password" minlength="4" type="password" required>
+        <mat-icon matPrefix class="matPrefix">lock</mat-icon>
+        <mat-error *ngIf="passwordRef.pristine">Password is required</mat-error>
+        <mat-error *ngIf="passwordRef.errors?.minlength">Weak Password</mat-error>
+      </mat-form-field>
+      <div class="text-left">
+        <p>
+          <a class="link" routerLink="/password_reset">I Forgot my Password !</a>
+        </p>
+      </div>
+    </mat-card-content>
+
+    <mat-card-actions class="text-right">
+      <button mat-raised-button color="primary" type="submit" name="login">Login</button>
+    </mat-card-actions>
+  </form>
+</mat-card>
