--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/scss/bootstrap-grid";
+@import "~bootstrap/scss/mixins";
+@import "~bootstrap/scss/utilities/text";
 @import '~material-design-icons/iconfont/material-icons.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~ngx-toastr/toastr.css";
+
+.spacer {
+  flex: 1 1 auto;
+}
+.link{
+  text-decoration: none;
+  color: #1976D2;
+}
+
