--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/scss/bootstrap-grid";
-@import "~bootstrap/scss/mixins";
-@import "~bootstrap/scss/utilities/text";
 @import '~material-design-icons/iconfont/material-icons.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~ngx-toastr/toastr.css";
@@ -12,5 +10,56 @@
 .link{
   text-decoration: none;
   color: #1976D2;
+}
+
+.text-right{
+  text-align: right;
+}
+
+.text-left{
+  text-align: left;
+}
+.text-center{
+  text-align: center;
+}
+
+.matPrefix {
+  margin-right: .5em;
+}
+
+.matPrefix {
+  margin-left: .5em;
+}
+
+.form-input {
+  font-size: 1.3em;
+  width: 98%;
+}
+
+@media (max-width: 992px) {
+  .form-control {
+    width: 70%;
+  }
+}
+.container{
+  width:80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (max-width: 768px) {
+  .form-control {
+    width: 100%;
+  }
+
+  .container{
+    width:100%;
+  }
+}
+
+@media (min-width: 992px) {
+  .form-control {
+    width: 50%;
+  }
 }
 
