--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,21 @@
-<mat-toolbar color="primary"  class="toolbar">
+<mat-toolbar color="primary" class="toolbar">
   <mat-toolbar-row>
-    <span>Second Line</span>
-    <span class="spacer"></span>
-    <mat-icon class="example-icon">verified_user</mat-icon>
+    <button mat-icon-button [matMenuTriggerFor]="menu">
+      <mat-icon>more_vert</mat-icon>
+    </button>
+    <span>NavBrand</span>
   </mat-toolbar-row>
 </mat-toolbar>
+
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="navigate('/login')">
+    <mat-icon>people</mat-icon>
+    <span>Login</span>
+  </button>
+  <button mat-menu-item (click)="navigate('/sign')">
+    <mat-icon>assignment</mat-icon>
+    <span>Sign</span>
+  </button>
+</mat-menu>
+
