--- a/src/app/modules/guest/components/signup/signup.component.html
+++ b/src/app/modules/guest/components/signup/signup.component.html
@@ -4,7 +4,7 @@
       <h1 class="mat-headline mat-display-1"> Signup </h1>
     </mat-card-title>
   </mat-card-header>
-  <form (ngSubmit)="signup(form)" #form="ngForm">
+  <form (ngSubmit)="sign(form)" #form="ngForm">
     <mat-card-content class="text-center">
 
       <mat-form-field class="form-input">
