fix(NavbarComponent): fix logout does not dispatch Disconnect in store

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
       <mat-icon>more_vert</mat-icon>
     </button>
 
-    <span>NavBrand</span>
+    <span><a routerLink="/">NavBrand</a></span>
   </mat-toolbar-row>
 </mat-toolbar>
 
