feat(LoggedModule): create SettingsComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,27 +2,9 @@
 <ngx-loading-bar height="3px" color="#FF3D00" includeSpinner></ngx-loading-bar>
 <app-navbar></app-navbar>
 <div style="margin-top: 5em">
-    <router-outlet></router-outlet>
+  <router-outlet></router-outlet>
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
+<br><br><br><br><br><br><br><br><br><br>
+<mat-toolbar color="primary" class="footer">
+  <span class="white--text">&copy; {{date}} </span>
+</mat-toolbar>
