--- a/src/app/modules/logged/components/home/home.component.html
+++ b/src/app/modules/logged/components/home/home.component.html
@@ -1,3 +1,11 @@
-<p>
-  home works!
-</p>
+<mat-card class="container">
+  <mat-card-header>
+    <mat-card-title class="mat-typography">
+      <h1 class="mat-headline mat-display-1 text-center">  Welcome {{username$ | async}} </h1>
+    </mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+
+  </mat-card-content>
+</mat-card>
