--- a/src/app/modules/guest/components/reset-password/reset-password.component.html
+++ b/src/app/modules/guest/components/reset-password/reset-password.component.html
@@ -1,3 +1,65 @@
-<p>
-  reset-password works!
-</p>
+<mat-card class="container">
+
+  <mat-card-header>
+    <mat-card-title>
+      <h1 class="mat-display-1">Reset Your password</h1>
+    </mat-card-title>
+  </mat-card-header>
+
+  <mat-card-content>
+    <mat-horizontal-stepper linear>
+
+      <mat-step [completed]="step1"  [editable]="false" label="Enter your Email">
+        <form (ngSubmit)="sendResetRequest(form)" #form="ngForm">
+          <mat-form-field class="form-input">
+            <input #emailRef="ngModel" matInput placeholder="Email" name="email" [(ngModel)]="email" minlength="4"
+                   pattern="^\w+([.-]?\w+)*@\w+([.-]?\w+)*(\.\w{2,3})+$" type="text" required>
+            <mat-icon matPrefix class="matPrefix">email</mat-icon>
+            <mat-error *ngIf="emailRef.pristine">Email required</mat-error>
+            <mat-error *ngIf="emailRef.errors?.pattern">Invalid Email</mat-error>
+            <mat-error *ngIf="emailRef.errors?.minlength">Email too short</mat-error>
+          </mat-form-field>
+          <mat-card-actions class="text-right" *ngIf="!next">
+            <button mat-raised-button color="primary" type="submit" name="send">Send</button>
+          </mat-card-actions>
+        </form>
+        <div class="text-right" *ngIf="next">
+          <button (click)="next=false" matStepperNext mat-raised-button color="primary" type="submit" name="Next">Next</button>
+        </div>
+      </mat-step>
+
+      <mat-step [completed]="step2" label="Enter your reset token">
+        <form (ngSubmit)="setToken(form2)" #form2="ngForm">
+          <mat-form-field class="form-input">
+            <input #tokenRef="ngModel" matInput placeholder="Reset token" name="token" [(ngModel)]="token" minlength="4" type="text" required>
+            <mat-icon matPrefix class="matPrefix">vpn_key</mat-icon>
+            <mat-error *ngIf="tokenRef.pristine">token required</mat-error>
+          </mat-form-field>
+          <mat-card-actions class="text-right" *ngIf="!next">
+            <button mat-raised-button color="primary" type="submit" name="send">Send</button>
+          </mat-card-actions>
+        </form>
+        <div class="text-right" *ngIf="next">
+          <button (click)="next=false" matStepperNext mat-raised-button color="primary" type="submit" name="Next">Next</button>
+        </div>
+      </mat-step>
+
+      <mat-step [completed]="step3" label="Enter your new Password">
+        <form (ngSubmit)="updatePassword(form3)" #form3="ngForm">
+          <mat-form-field class="form-input" style="margin-bottom: 0px">
+            <input #passwordRef="ngModel" matInput placeholder="Password" name="Password"
+                   [(ngModel)]="password" minlength="4" type="password" required>
+            <mat-icon matPrefix class="matPrefix">lock</mat-icon>
+            <mat-error *ngIf="passwordRef.pristine">Password is required</mat-error>
+            <mat-error *ngIf="passwordRef.errors?.minlength">Weak Password</mat-error>
+          </mat-form-field>
+
+          <mat-card-actions class="text-right" >
+            <button mat-raised-button color="primary" type="submit" name="updatePassword">Update</button>
+          </mat-card-actions>
+        </form>
+      </mat-step>
+
+    </mat-horizontal-stepper>
+  </mat-card-content>
+</mat-card>
