feat(AppModule): create NotfoundComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<ngx-loading-bar height="3px" color="#FF3D00" includeSpinner></ngx-loading-bar>
+<ngx-loading-bar height="3px" color="#FF3D00" ></ngx-loading-bar>
 <app-navbar></app-navbar>
 <div style="margin-top: 5em">
   <router-outlet></router-outlet>
 </div>
-
-<mat-toolbar color="primary" class="footer">
-  <span class="white--text">&copy; {{date}} </span>
-</mat-toolbar>
+<app-footer></app-footer>
