--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,7 +46,8 @@
   margin-right: auto;
   margin-left: auto;
 }
-
+.danger{
+  background-color: #red;}
 @media (max-width: 768px) {
   .form-control {
     width: 100%;
