--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<mat-toolbar color="primary" class="footer">
+<mat-toolbar color="primary" class="footer mat-elevation-z4">
   <span class="white--text">&copy; {{date}} </span>
 </mat-toolbar>
