--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -3,14 +3,12 @@
   top: 0;
   left: 0;
   z-index: 1;
-  background-color: #1976D2 !important;
-  box-shadow: 1px 1px 8px 2px darkgrey
 }
 
 .sidebar {
   position: fixed;
   height: 100%;
   left: 0;
-  top: 4em;
+  top:0;
   overflow: auto;
 }
