--- a/src/app/modules/guest/components/reset-password/reset-password.component.html
+++ b/src/app/modules/guest/components/reset-password/reset-password.component.html
@@ -46,17 +46,27 @@
 
       <mat-step [completed]="step3" label="Enter your new Password">
         <form (ngSubmit)="updatePassword(form3)" #form3="ngForm">
-          <mat-form-field class="form-input" style="margin-bottom: 0px">
-            <input #passwordRef="ngModel" matInput placeholder="Password" name="Password"
-                   [(ngModel)]="password" minlength="4" type="password" required>
+
+          <mat-form-field class="form-input">
+            <input #passwordRef="ngModel" matInput placeholder="password" name="password" [(ngModel)]="password" minlength="4" type="password" required>
             <mat-icon matPrefix class="matPrefix">lock</mat-icon>
             <mat-error *ngIf="passwordRef.pristine">Password is required</mat-error>
             <mat-error *ngIf="passwordRef.errors?.minlength">Weak Password</mat-error>
           </mat-form-field>
 
+          <mat-form-field class="form-input" style="margin-bottom: 0px">
+            <input #confirmedPasswordRef="ngModel" matInput placeholder="Confirm password" name="confirmedPassword" [(ngModel)]="confirmedPassword" minlength="4" type="password" required>
+            <mat-icon matPrefix class="matPrefix">lock</mat-icon>
+            <mat-error *ngIf="confirmedPasswordRef.pristine">Password is required</mat-error>
+            <mat-error *ngIf="confirmedPasswordRef.errors?.minlength">Weak Password</mat-error>
+          </mat-form-field>
+          <div class="text-left">
+            <small style="color: #f44336;margin-left: .2em" *ngIf="confirmedPasswordRef.value !== passwordRef.value">Password does not match</small>
+          </div>
           <mat-card-actions class="text-right" >
             <button mat-raised-button color="primary" type="submit" name="updatePassword">Update</button>
           </mat-card-actions>
+
         </form>
       </mat-step>
 
