--- a/src/app/modules/logged/modules/admin/components/administration-home/administration-home.component.html
+++ b/src/app/modules/logged/modules/admin/components/administration-home/administration-home.component.html
@@ -10,6 +10,14 @@
   </mat-card-header>
 
   <mat-card-content>
+    <mat-list role="list">
+      <mat-list-item role="listitem">
+        <a mat-raised-button routerLink="/administration/users" class="form-control">
+          <mat-icon>people</mat-icon>
+          <span>Manage users</span>
+        </a>
+      </mat-list-item>
+    </mat-list>
   </mat-card-content>
 
 </mat-card>
