--- a/src/app/modules/logged/modules/admin/components/users/users.component.html
+++ b/src/app/modules/logged/modules/admin/components/users/users.component.html
@@ -1,55 +1,64 @@
 <mat-card class="example-container container mat-elevation-z4">
-  <mat-form-field class="container">
-    <input matInput placeholder="Search" (keyup)="search()" [(ngModel)]="query">
-  </mat-form-field>
-  <mat-table #table [dataSource]="users?.content">
+  <mat-card-header>
+    <mat-card-title>
+      <h1 class="mat-display-2"> Manage users</h1>
+    </mat-card-title>
+  </mat-card-header>
 
-    <ng-container matColumnDef="username">
-      <mat-header-cell *matHeaderCellDef > Username</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.username}}</mat-cell>
-    </ng-container>
+  <mat-card-content>
+    <mat-form-field class="container">
+      <input matInput placeholder="Search" (keyup)="search()" [(ngModel)]="query">
+    </mat-form-field>
+    <mat-table #table [dataSource]="users?.content">
 
-    <ng-container matColumnDef="email">
-      <mat-header-cell *matHeaderCellDef> Email</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.email}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="username">
+        <mat-header-cell *matHeaderCellDef> Username</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.username}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="confirmed">
-      <mat-header-cell *matHeaderCellDef> Status</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.role !== null }}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="email">
+        <mat-header-cell *matHeaderCellDef> Email</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.email}}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="role">
-      <mat-header-cell *matHeaderCellDef> Role</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        <mat-select placeholder="role" [(ngModel)]="element.role" style="width: 5em">
-          <mat-option value="admin">Admin</mat-option>
-          <mat-option value="user">user</mat-option>
-        </mat-select>
-      </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="confirmed">
+        <mat-header-cell *matHeaderCellDef> Status</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.role !== null }}</mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="createdAt">
-      <mat-header-cell *matHeaderCellDef> Created at</mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.createdAt |date}}</mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="role">
+        <mat-header-cell *matHeaderCellDef> Role</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <mat-select placeholder="role" [(ngModel)]="element.role" style="width: 5em">
+            <mat-option value="admin">Admin</mat-option>
+            <mat-option value="user">user</mat-option>
+          </mat-select>
+        </mat-cell>
+      </ng-container>
 
-    <ng-container matColumnDef="action">
-      <mat-header-cell *matHeaderCellDef> Action</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        <button class="mat-elevation-z1" color="primary" mat-mini-fab (click)="save(element)"><mat-icon>{{element.role !== null?'check':'save' }}</mat-icon></button>
-        <button class="mat-elevation-z1" color="warn" mat-mini-fab (click)="remove(element)">
-          <mat-icon>delete_forever</mat-icon></button>
-      </mat-cell>
-    </ng-container>
+      <ng-container matColumnDef="createdAt">
+        <mat-header-cell *matHeaderCellDef> Created at</mat-header-cell>
+        <mat-cell *matCellDef="let element"> {{element.createdAt |date}}</mat-cell>
+      </ng-container>
 
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-  </mat-table>
+      <ng-container matColumnDef="action">
+        <mat-header-cell *matHeaderCellDef> Action</mat-header-cell>
+        <mat-cell *matCellDef="let element">
+          <button color="primary" mat-icon-button (click)="save(element)">
+            <mat-icon>{{element.role !== null?'check':'save' }}</mat-icon>
+          </button>
+          <button color="warn" mat-icon-button (click)="remove(element)">
+            <mat-icon>delete_forever</mat-icon>
+          </button>
+        </mat-cell>
+      </ng-container>
 
-  <mat-paginator [length]="pageSize"
-                 [pageSize]="pageLength"
-                 (page)="change($event)"
-  >
-  </mat-paginator>
+      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </mat-card-content>
+  <mat-card-footer>
+    <mat-paginator [length]="pageSize" [pageSize]="pageLength" (page)="change($event)">
+    </mat-paginator>
+  </mat-card-footer>
 </mat-card>
